# mechanica

./: .gitmodules  .readthedocs.yaml  CMakeLists.txt  README.md  VERSION.txt
apps/: CMakeLists.txt  mx-pyrun.cpp
examples/: CMakeLists.txt  argon.py  argon_tstat.py  become_1.py  bond_ball.py  bonded_beads.py  bonded_sc_lattice.py  bonded_sphere.py  boundary1.py  boundary_morse.py  boundary_reset.py  boundary_uptake_secrete.py  camera.py  cell_sorting.py  cell_sorting_cuda.py  change_type.py  clipped_argon.py  clipped_cell_sorting.py  colormaps.py  coupling_force.py  cube.py  cube2.py  custom_potential.py  custom_potential_2.py  data_output.py  dpd1.py  dpd2.py  dpd2new.py  epiboly-asym.py  epiboly1.periodic.py  epiboly1.py  epiboly1_plotting.py  epiboly2.py  epiboly2_plotting.py  epiboly3.py  epiboly3_plot.py  epiboly_cluster.py  epiboly_morse_cluster.py  epiboly_plotting.py  events1.py  (+46 more)
examples/notebooks/: bonded_sc_lattice.ipynb  boundary_reset.ipynb  cell_sorting.ipynb  custom_potential.ipynb  dpd_plate.ipynb  solid_mech_fracture.ipynb
include/: CMakeLists.txt  Mechanica.h  MxStyle.h  NOMStyle.h  mx_config.h.in  mx_port.h  mx_runtime.h
package/: CMakeLists.txt
package/conda/: CMakeLists.txt  bld.bat  build.sh  meta.yaml
package/local/: CMakeLists.txt  mx_install.bat  mx_install.sh
src/: CMakeLists.txt  FlipEdgeToPolygon.cpp  LangevinPropagator.cpp  MechanicaConfig.cmake.in  MeshOperations.h  MeshRelationships.cpp  MxBind.cpp  MxBind.h  MxCell.cpp  MxCellVolumeConstraint.h  MxConstraints.h  MxCylinderModel.cpp  MxLattice.h  MxLogger.cpp  MxLogger.h  MxLogger.i  MxMesh.cpp  MxMesh.h  MxMeshCore.cpp  MxMeshShaderProgram.res  MxModel.cpp  MxModel.h  MxPolygonAreaConstraint.h  MxPropagator.cpp  MxPropagator.h  MxSimulator.cpp  MxSimulator.h  MxSimulator.i  MxSurfaceSimulator.i  MxSystem.cpp  MxSystem.h  MxSystem.i  MxUniverse.cpp  MxUniverse.h  MxUniverse.i  MxUtil.cpp  MxUtil.h  MxUtil.i  __init__.py  jwidget.py  (+12 more)
src/cuda/: MxAngleCUDAConfig.cpp  MxAngleCUDAConfig.h  MxBondCUDAConfig.cpp  MxBondCUDAConfig.h  MxEngineCUDAConfig.cpp  MxEngineCUDAConfig.h  MxSimulatorCUDAConfig.cpp  MxSimulatorCUDAConfig.h
src/event/: MxEvent.cpp  MxEvent.h  MxEvent.i  MxEventList.cpp  MxEventList.h  MxEventPyExecutor.cpp  MxEventPyExecutor.h  MxEventPyExecutor.i  MxParticleEvent.cpp  MxParticleEvent.h  MxParticleEvent.i  MxParticleEventSingle.cpp  MxParticleEventSingle.h  MxParticleTimeEvent.cpp  MxParticleTimeEvent.h  MxParticleTimeEvent.i  MxTimeEvent.cpp  MxTimeEvent.h  MxTimeEvent.i  event.i
src/io/: Mx3DFEdgeData.cpp  Mx3DFEdgeData.h  Mx3DFEdgeData.i  Mx3DFFaceData.cpp  Mx3DFFaceData.h  Mx3DFFaceData.i  Mx3DFIO.cpp  Mx3DFIO.h  Mx3DFMeshData.cpp  Mx3DFMeshData.h  Mx3DFMeshData.i  Mx3DFRenderData.cpp  Mx3DFRenderData.h  Mx3DFStructure.cpp  Mx3DFStructure.h  Mx3DFStructure.i  Mx3DFVertexData.cpp  Mx3DFVertexData.h  Mx3DFVertexData.i  MxFIO.cpp  MxFIO.h  MxIO.cpp  MxIO.h  io.i  mx_io.cpp  mx_io.h
src/models/: CMakeLists.txt  __init__.py  modeltree.cmake
src/rendering/: ArcBall.cpp  ArcBallCamera.h  MxAngleRenderer.cpp  MxAngleRenderer.h  MxApplication.cpp  MxApplication.h  MxArrowRenderer.cpp  MxArrowRenderer.h  MxArrowRenderer.i  MxBondRenderer.cpp  MxBondRenderer.h  MxClipPlane.cpp  MxClipPlane.hpp  MxClipPlane.i  MxColorMapper.cpp  MxColorMapper.hpp  MxColorMapper.i  MxDihedralRenderer.cpp  MxDihedralRenderer.h  MxEglInfo.cpp  MxEglInfo.h  MxGlInfo.cpp  MxGlInfo.h  MxGlfwApplication.cpp  MxGlfwApplication.h  MxGlfwWindow.cpp  MxGlfwWindow.h  MxGlfwWindow.i  MxImageConverters.cpp  MxImageConverters.h  MxKeyEvent.cpp  MxKeyEvent.hpp  MxKeyEvent.i  MxMeshRenderer.h  MxOrientationRenderer.cpp  MxOrientationRenderer.h  MxRenderTarget.h  MxRenderer.h  MxStyle.cpp  MxStyle.hpp  (+23 more)
src/shaders/: MxFlat3D.cpp  MxFlat3D.h  MxFlat3D.vert  MxPhong.cpp  ParticleSphereShader.h
src/state/: MxSpecies.cpp  MxSpecies.h  MxSpecies.i  MxSpeciesList.cpp  MxSpeciesList.h  MxSpeciesList.i  MxSpeciesValue.cpp  MxSpeciesValue.h  MxSpeciesValue.i  MxStateVector.cpp  MxStateVector.h  MxStateVector.i  state.i
src/types/: MxMagnum.cpp  MxMagnum.h  MxMatrix.h  MxMatrix3.h  MxMatrix4.h  MxQuaternion.h  MxVector.h  MxVector2.h  MxVector3.h  MxVector4.h  mx_cast.cpp  mx_cast.h  mx_types.h  types.i
testing/: CMakeLists.txt  build_tests.bat  build_tests.sh  run_tests.bat  run_tests.sh
testing/C/: CMakeLists.txt  MxCTest.h  MxCTest_Argon.c  MxCTest_Argon_tstat.c  MxCTest_become.c  MxCTest_bond_ball.c  MxCTest_bonded_beads.c  MxCTest_boundary1.c  MxCTest_boundary_morse.c  MxCTest_cell_sorting.c  MxCTest_change_type.c  MxCTest_clipped_argon.c  MxCTest_coupling_force.c  MxCTest_custom_potential.c  MxCTest_events1.c  MxCTest_flux_periodic1.c  MxCTest_morse_cluster.c  MxCTest_party.c  MxCTest_poiseuille.c  MxCTest_uptake_secrete.c
testing/cpp/: CMakeLists.txt  MxTest.h  MxTest_Argon.cpp  MxTest_Argon_tstat.cpp  MxTest_become.cpp  MxTest_bond_ball.cpp  MxTest_bonded_beads.cpp  MxTest_boundary_morse.cpp  MxTest_change_type.cpp  MxTest_clipped_argon.cpp  MxTest_colormaps.cpp  MxTest_custom_potential.cpp  MxTest_dpd2new.cpp  MxTest_epiboly_morse_cluster.cpp  MxTest_flux_periodic1.cpp  MxTest_flux_secrete.cpp  MxTest_mitosis_dyn.cpp  MxTest_mitosis_od.cpp  MxTest_poiseuille.cpp  MxTest_ring_ball.cpp  MxTest_uptake_secrete.cpp
testing/python/: CMakeLists.txt  MxPyTest_argon.py  MxPyTest_argon_tstat.py  MxPyTest_become_1.py  MxPyTest_bond_ball.py  MxPyTest_bonded_beads.py  MxPyTest_bonded_sc_lattice.py  MxPyTest_bonded_sphere.py  MxPyTest_boundary1.py  MxPyTest_boundary_morse.py  MxPyTest_boundary_uptake_secrete.py  MxPyTest_cell_sorting.py  MxPyTest_change_type.py  MxPyTest_clipped_argon.py  MxPyTest_clipped_cell_sorting.py  MxPyTest_colormaps.py  MxPyTest_coupling_force.py  MxPyTest_cube.py  MxPyTest_cube2.py  MxPyTest_custom_potential.py  MxPyTest_custom_potential_2.py  MxPyTest_dpd1.py  MxPyTest_dpd2.py  MxPyTest_dpd2new.py  MxPyTest_epiboly-asym.py  MxPyTest_epiboly1.py  MxPyTest_epiboly1_periodic.py  MxPyTest_epiboly2.py  MxPyTest_epiboly3.py  MxPyTest_epiboly_cluster.py  MxPyTest_epiboly_morse_cluster.py  (+39 more)
(+490 files in other folders)
